--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -200,3 +200,29 @@ a {
 .c-container > img {
   @apply w-[144px];
 }
+
+/* Swiper Slider */
+.r-head {
+  @apply mb-[32px];
+}
+
+.r-card {
+  @apply gap-[10px] p-[16px] rounded-lg max-w-max m-auto;
+  transition: all 300ms ease-in-out;
+}
+
+.r-card > img {
+  @apply w-full max-w-[240px];
+}
+
+.r-card > :nth-child(2) {
+  @apply text-[20px] font-semibold flex gap-[4px];
+}
+
+.r-card > :nth-child(3) {
+  @apply text-[24px];
+}
+
+.r-card > :nth-child(4) {
+  @apply text-[12px] w-[240px];
+}
