feat: added hover effect

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -226,3 +226,18 @@ a {
 .r-card > :nth-child(4) {
   @apply text-[12px] w-[240px];
 }
+
+/* Hover r-card */
+.r-card:hover {
+  @apply scale-[1.025] cursor-pointer rounded-lg;
+  background: linear-gradient(
+    180deg,
+    rgba(225, 255, 255, 0) 0%,
+    rgba(136, 160, 255, 0.46) 217.91%
+  );
+  box-shadow: 0 72px 49px -51px #88a0ff36;
+}
+
+.swiper-horizontal {
+  overflow: visible;
+}
