feat: added value files and install react accesible accordion

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -248,10 +248,18 @@ a {
 }
 
 .r-buttons {
-  @apply absolute gap-[10px] top-[30px] right-[30px];
+  @apply absolute gap-[10px] top-[-4rem] right-[30px];
 }
 
 .r-buttons > button {
   @apply text-[20px] py-[0.2rem] px-[0.8rem] text-[blue] border-none rounded-lg bg-white cursor-pointer;
+  box-shadow: 0 0 5px 1px #00000040;
+}
+
+.r-buttons > :nth-child(1) {
+  @apply bg-[#eeeeff];
+}
+
+.r-buttons > :nth-child(2) {
   box-shadow: 0 0 5px 1px #00000040;
 }
