feat: added contact modes

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -294,7 +294,32 @@ a {
   @apply gap-[8px];
 }
 
+.contactModes {
+  @apply mt-[32px] gap-[16px];
+}
 
+.contactModes .row {
+  @apply gap-[24px];
+}
+
+.mode {
+  @apply w-[256px] p-[16px] rounded-md gap-[16px];
+  border: 0.8px solid rgba(128, 128, 128, 0.143);
+  transition: all 300ms ease-in;
+}
+
+.mode .button {
+  @apply w-[100%] text-[blue] text-[14px] font-semibold;
+  background: var(--lightBlue);
+}
+
+.mode > :nth-child(1) {
+  @apply w-[100%] gap-[25px];
+}
+
+.mode .detail .primaryText {
+  @apply text-[1.1rem] font-semibold;
+}
 
 /* media queries */
 @media (min-width: 1536px) {
