--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -347,6 +347,13 @@ a {
   color: rgba(255, 255, 255, 0.78);
 }
 
+.inner-container .button {
+  background: #5a73d3;
+  border: 2px solid white;
+  box-shadow: var(--shadow);
+  border-radius: 10px;
+}
+
 /* media queries */
 @media (min-width: 1536px) {
   .innerWidth {
