feat: make mobile nav

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -21,7 +21,7 @@
   scroll-behavior: smooth;
 }
 a {
-  color: inherit; 
+  color: inherit;
   text-decoration: none;
 }
 .paddings {
@@ -365,6 +365,19 @@ a {
 
 .f-menu {
   @apply gap-[24px] mt-[24px] font-medium;
+}
+
+/* small Mobile */
+@media (max-width: 768px) {
+  .menu-icon {
+    display: block;
+  }
+  .h-menu {
+    @apply absolute top-[48px] right-[64px] flex-col font-medium gap-[32px] p-[48px] rounded-xl items-start;
+    color: var(--black);
+    background: white;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.5);
+  }
 }
 
 /* media queries */
