--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -55,11 +55,11 @@ a {
 }
 
 .primaryText {
-  @apply text-[ #1f3e72] text-[32px] font-bold;
+  @apply text-[#1f3e72] text-[32px] font-bold;
 }
 
 .secondaryText {
-  @apply text-[15px]
+  @apply text-[15px];
   color: rgb(140 139 139);
 }
 .orangeText {
@@ -357,6 +357,7 @@ a {
     color: var(--black);
     background: white;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.5);
+    transition: all 300ms ease-in;
   }
 }
 
@@ -365,6 +366,17 @@ a {
   .innerWidth {
     max-width: 1280px;
     margin: auto;
+  }
+}
+
+@media (max-width: 640px) {
+  /* Hero Section */
+  .hero-container {
+    @apply pt-[64px];
+  }
+
+  .hero-title > h1 {
+    @apply text-[40px] leading-[48px];
   }
 }
 
